Fix quiz dropdown menu alignment

--- a/client/styles/editQuiz.less
+++ b/client/styles/editQuiz.less
@@ -41,6 +41,9 @@
 
             text-align: right;
 
+            // Align dropdown menu items to the left
+            .btn-group { text-align: left; }
+
             .action:not(.last) { margin-right: .4em; }
 
             .messages {
